--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,13 +16,10 @@
           </a>
           {% endif %}
           <span class="point"> · </span>
-          <span><a href="{{ site.viewsourceroot }}{{ page.path }}">View source</a></span>
-          <span class="point"> · </span>
-          <span><a class="newpost" href="javascript:;">New post</a></span>
-		  <span class="point"> · </span>
           <span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
           <span class="point"> · </span>
-          <span>&copy; 2015 LiXizhi</span>
+          <span>&copy; 2018 Honwhy Wang</span>
+          <span>Designed by <a href="https://github.com/LiXizhi">LiXizhi</a></span>
       </div>
     </div>
   </div>
