chang footer again

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,9 @@
           <span class="point"> · </span>
           <span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
           <span class="point"> · </span>
-          <span>&copy; 2018 Honwhy Wang</span>
-          <span>Designed by <a href="https://github.com/LiXizhi">LiXizhi</a></span>
+          <span>honwhy.wang &copy; 2018</span>
+          <span class="point"> · </span>
+          <span>Theme by: <a href="https://github.com/LiXizhi">LiXizhi</a></span>
       </div>
     </div>
   </div>
