修改title及强制使用https

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,4 +53,9 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 {% endif %}
+<script type="text/javascript">
+  var host = "honwhy.wang";
+  if ((host == window.location.host) && (window.location.protocol != "https:"))
+      window.location.protocol = "https";
+</script>
 </head>
